# gabioinf

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  LICENSE  Makefile.toml  README.md  devenv.nix  devenv.yaml  fly.toml  index.html  justfile  package-lock.json  package.json  rust-analyzer.json  tailwind.config.js
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  cleanup-preview.yml  deploy-preview.yml  fly-deploy.yml
.sqlx/: query-042fb3ae55d3599594b477f7f0ebe9aa95779379e9f9d2b1c6200cbdf5dbaaf6.json  query-11cdbccf8a83d2d75329d2d74499a265ef8292821b3a55be00a93c4c9d4669ad.json  query-11e96cfd8c2736f13ce55975ea910dd68640f6f14e38a4b3342d514804e3de27.json  query-1b816d26d88b4a759bfb76996111502058cffd7d6111442c21a9764ce42c1660.json  query-1f8de4cf36f2fc390e985373d9ddc11072d54038e30f76a491710ff55fe4f830.json  query-2335c2aff00ddcb0caeb47f2994fd839cc498e023264b24e1001476f79263677.json  query-23e64c7cb3b3a48aa1fe740d21811c5dc9f67d41ee0847ad4ffb08c8f6337c9f.json  query-2e9b4af9aa4dca73d7e4d20bc3ce3ea07fc8605bccc430602cf3ef47dc3af8e4.json  query-454b0c9070bc7824ebd2b44a6856957607fdce8e1f52b1f2e3d1cbb0c292058a.json  query-4fac131c4287b4f6339544787c9baa25ec63ade646ee098f23074b5b355d2b54.json  query-511e5be0238e210ae1b0d07f759a84d5e13917ad36376065d36535fedc6e4777.json  query-562494cebb37d4874e8a1e1df93560cd5b5b933337ae8973bf53056b8b20c813.json  query-5704500f1045ca85ed15285c5bb5572f5b49552104acfc886cf4c3ee85493f23.json  query-6244aff17cbd8f9eb6c1d5265d8f093dcabf34dcdeac870025b07b1d004cc5b4.json  query-639d71999d4deede480c5e9f188aba25a8edbc507141b2c0bdcd5d61c5de1aa3.json  query-648ebd0e95a9eec7314722c7b0f365125b39a32461bc90c98b8aed304dc56415.json  query-6e44cc54a1b9b176aa5cc23500a44e3eda8ede76a260692314148df7994eda15.json  query-720d954ef539a36074d0499aa5e672f2d16b5335b2d77cf0dba8f5acdbda86f2.json  query-73a14671e4802487825e455b71ae4ed96d44904ae8a0d1bb91cdc73915f04410.json  query-8b5c567302246f1d9e160cdef4545c021496019db1685241699e29f4ba3ba4b0.json  query-947af03d2a945011d0a070de1c52858b55c4ab3a86dc1a08c8311f0df1b12175.json  query-9e1d950f9b44dace54f3886ea7b99920c54a89f62b026c7f84723936411a759f.json  query-a3724a2a6062d350b8d6b6401ddfc9904b78da8bf68220739c29445a36efdaad.json  query-a4539e43efdf72c36081b8a3b81e166a0fcfc9da180ba3b610c54b585cfb5273.json  query-a8317fb6eb15a221ac350ba3234469e82a07b7b885cc5ae56ab9d9c5a9374a07.json  query-a8809533bd9d242619a4563bbca69d47492b4db3b66e818f7ed35808d91ea192.json  query-aac32b56fdf76779893688ce62c6727406ee870377ad589ecdedb5222d177a8f.json  query-ac852ff5e06ea59bec06ede93994b8e17182f300081f7795f008eeccc3d30742.json  query-b2924af01c46833b8fda405176fd2b8b197100c1ddde108c0f75bea5caa36974.json  query-b61377101cd65dbd8c97702fe3a76f791c43849b84d5e16e4e3d98cbde9f7a17.json  query-b62894c43560a913fa8f7cb2734525fb9599efac9a8761483c6ce48483ed6a8c.json  query-ba5a0a755fe1362570e71fa405d7f44a677c010095636f5fa979a769f5903f30.json  query-c6c530676c236db65ec2238fac07b70888c57b841c334aa7255ac21c1940bbc7.json  query-d10991e201d05d7465a95077f831c8b3bd834d36198539978c09b20561763e08.json  query-d130c416e56962ab334ee1b4ca77369a4c35dbc1cf31279f7ed4d418ed75aabb.json  query-d212d949a8e3ececa0b4e851ddf133ff29c5c9bf24ef9c2c078c63332857611c.json  query-d3b38fc4a050f322c7bfa7e83c67ddb05d20e94a5d1ca9569be573a682823271.json  query-d3d9eb807056d7844516379cd4d954fca18e2ad821e56ff8999a410b59416c82.json  query-ea4f623b88ebb32f7052182ace0259a4a446cc08c422270bb9f2bc08bda0db44.json
assets/: alien_white.webm  main.css  navbar.css  robots.txt  sesh.avif  tailwind 2.css  tailwind.css
assets/styles/: alien_links.css  main.css  navbar.css
backend/: Cargo.toml  Shuttle.toml
backend/migrations/: 20240725152107_create_guests_tbl.sql  20240725153528_create_guestbook_tbl.sql  20240725155107_create_guests_tbl.sql  20240725175440_create_sessions.sql
backend/src/: app_state.rs  config.rs  db.rs  errors.rs  lib.rs  shuttle_utils.rs
backend/src/cruds/: guest_crud.rs  guestbook_crud.rs  guestbook_crud_old.rs  mod.rs
backend/src/domain/: mod.rs
backend/src/domain/logic/: admin_middleware.rs  auth.rs  auth_backend.rs  auth_middleware.rs  mod.rs  oauth.rs
backend/src/domain/models/: credentials.rs  group.rs  guest.rs  guestbook_entry.rs  mod.rs  permission.rs  session.rs
backend/src/extractors/: governor.rs
backend/src/headers/: governor.rs  mod.rs
backend/src/repos/: authorization_repo.rs  guest_repo.rs  guestbook_repo.rs  mod.rs  repository.rs  session_repo.rs
backend/src/utils/: mod.rs  profanity_filter.rs  shuttle_utils.rs  testutils.rs
backend/src/wapi/: mod.rs  router.rs
backend/src/wapi/admin/: dashboard.rs  execute_query.rs  get_admins.rs  mod.rs  promote.rs
backend/src/wapi/admin/templates/: admin_dashboard.html
backend/src/wapi/guest/: get_guests.rs  login_guest.rs  logout_guest.rs  logout_user.rs  mod.rs
backend/src/wapi/guestbook/: create.rs  delete.rs  get.rs  mod.rs  update.rs
backend/templates/: admin.html
config/: default.toml  development.toml  production.toml
data/: projects.yml  synthetic.sql
fixtures/: synthetic.sql
frontend/: Cargo.toml  Dioxus.toml
frontend/assets/: alien.webm  tailwind.css  tailwind.css.br
frontend/src/: main.rs
frontend/src/components/: mod.rs  navbar.rs
frontend/src/components/layout/: footer.rs  mod.rs  navbar.rs
frontend/src/pages/: home.rs
migrations/: 20240725152107_create_guests_tbl.sql  20240725153528_create_guestbook_tbl.sql
public/: alien_links.css  alien_white.mov  main.css  sesh.avif  tailwind.css  test.html
shared/: Cargo.toml
shared/src/: lib.rs
src/: auth.rs  hide.rs  main.rs  markdown.rs  server.rs  use_mounted.rs  use_resize_observer.rs
src/backend/: app_state.rs  config.rs  db.rs  errors.rs  mod.rs  server.rs
src/backend/extractors/: governor.rs
src/backend/repos/: authorization_repo.rs  (+3 more)
src/components/: buttons.rs  card.rs  divider.rs  loading.rs  mod.rs  signature_list.rs  styled_button.rs
src/pages/: about.rs  guestbook.rs  home.rs  mod.rs  not_found.rs  projects.rs  under_construction.rs
src/shared/: mod.rs
(+34 files in other folders)
