[package]
name = "gabioinf"
version = "0.1.0"
edition = "2021"
authors = ["LilDojd <yawner@protonmail.com>"]
publish = false

[dependencies]
anyhow = { version = "1.0.92" }

reqwest = { version = "0.12.9", default-features = false, features = [
  "http2",
  "json",
  "rustls-tls",
], optional = true }
tracing = { version = "0.1.40" }
time = { version = "0.3", features = [
  "macros",
  "formatting",
  "serde",
  "local-offset",
] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = { version = "1.0.132", optional = true }
config = { version = "0.14.1", features = ["convert-case"], optional = true }
derive_more = { version = "1.0.0", features = ["from", "into"] }
thiserror = { version = "1.0.68", optional = true }


# Backend
axum = { version = "0.7", features = ["multipart", "macros"], optional = true }
validator = { version = "0.19.0", features = ["derive"], optional = true }
tokio = { version = "1.41.0", features = ["full"], optional = true }
axum-extra = { version = "0.9.3", features = [
  "cookie-private",
  "typed-header",
], optional = true }
sqlx = { version = "0.8", features = [
  "time",
  "postgres",
  "macros",
  "tls-rustls",
], optional = true }
tower = { version = "0.5", optional = true, features = ["timeout", "util"] }
tower-http = { version = "0.6.1", features = ["cors", "fs"], optional = true }
oauth2 = { version = "4.4.2", optional = true }
rustrict = { version = "0.7.31", optional = true }
governor = { version = "0.7.0", optional = true }
tower_governor = { version = "0.4.3", features = [
  "tracing",
  "axum",
], optional = true }
forwarded-header-value = { version = "0.1.1", optional = true }
tower-sessions = { version = "0.13.0", features = ["signed"], optional = true }
tower-sessions-sqlx-store = { version = "0.14", features = [
  "postgres",
], optional = true }
axum-login = { version = "0.16.0", optional = true }
axum-helmet = { version = "0.1.0", optional = true }
axum-server = { version = "0.7.1", optional = true }

# Dioxus
dioxus = { git = "https://github.com/DioxusLabs/dioxus.git", features = [
  "fullstack",
  "router",
  "web",
] }
dioxus-web = { git = "https://github.com/DioxusLabs/dioxus.git", features = [
  "hydrate",
], optional = true }
dioxus-logger = { version = "0.5.1" }

# Web

serde_yaml = { version = "0.9" }
async-std = { version = "1.13.0" }
instant = { version = "0.1.13", features = ["inaccurate", "wasm-bindgen"] }
rand = { version = "0.8.5" }
getrandom = { version = "0.2.15", features = ["js"] }
markdown = { version = "1.0.0-alpha.21" }
web-sys = { version = "0.3.72", features = [
  "HtmlCanvasElement",
  "HtmlImageElement",
  "CanvasRenderingContext2d",
  "ImageData",
  "ImageBitmap",
  "Path2d",
  "ResizeObserver",
  "ResizeObserverEntry",
  "Element",
  "DomRectReadOnly",
] }

futures = { version = "0.3.31" }

sentry = { version = "0.34.0", default-features = false, features = [
  "backtrace",
  "contexts",
  "panic",
  "transport",
  "debug-images",
  "reqwest",
  "rustls",
], optional = true }
wasm-bindgen-futures = "0.4.45"
wasm-bindgen = "0.2.93"
tower-etag-cache = { git = "https://github.com/LilDojd/tower-etag-cache.git", features = [
  "const-lru-provider",
], optional = true }

[features]
default = []

server = [
  "dep:axum",
  "dep:governor",
  "dep:tokio",
  "dep:axum-server",
  "dep:axum-extra",
  "dep:sqlx",
  "dep:reqwest",
  "dep:tower",
  "dep:tower-http",
  "dep:oauth2",
  "dep:rustrict",
  "dep:validator",
  "dep:tower_governor",
  "dep:forwarded-header-value",
  "dep:tower-sessions",
  "dep:tower-sessions-sqlx-store",
  "dep:tower-etag-cache",
  "dep:axum-login",
  "dep:axum-helmet",
  "dep:serde_json",
  "dep:config",
  "dep:thiserror",
  "dep:sentry",
  "dioxus/axum",
]
web = ["time/wasm-bindgen", "dep:dioxus-web"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.build-override]
codegen-units = 1
debug = false
opt-level = 3
strip = "symbols"
