[package]
name = "gabioinf"
version = "0.1.0"
edition = "2024"
authors = ["LilDojd <yawner@protonmail.com>"]
publish = false

[dependencies]
anyhow = { version = "1.0.97" }

reqwest = { version = "0.12.11", default-features = false, features = [
  "http2",
  "json",
  "rustls-tls",
], optional = true }
tracing = { version = "0.1.40" }
time = { version = "0.3", features = [
  "macros",
  "formatting",
  "serde",
  "local-offset",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.140", optional = true }
config = { version = "0.15.4", features = ["convert-case"], optional = true }
derive_more = { version = "2.0.0", features = ["from", "into"] }
thiserror = { version = "2.0.12", optional = true }


# Backend
# TODO: When switching to dx 0.7 we need to make sure axum 0.7 -> 0.8 does not break with RPIT
axum = { version = "0.8", features = ["multipart", "macros"], optional = true }
validator = { version = "0.20.0", features = ["derive"], optional = true }
tokio = { version = "1.41.1", features = ["full"], optional = true }
axum-extra = { version = "0.10", features = [
  "cookie-private",
  "typed-header",
], optional = true }
sqlx = { version = "0.8", features = [
  "time",
  "postgres",
  "macros",
  "tls-rustls",
], optional = true }
tower = { version = "0.5", optional = true, features = ["timeout", "util"] }
tower-http = { version = "0.6.1", features = ["cors", "fs"], optional = true }
oauth2 = { version = "5.0.0", optional = true }
rustrict = { version = "0.7.31", optional = true }
governor = { version = "0.8", optional = true }
tower_governor = { version = "0.6.0", features = [
  "tracing",
  "axum",
], optional = true }
forwarded-header-value = { version = "0.1.1", optional = true }
tower-sessions = { version = "0.14.0", features = ["signed"], optional = true }
tower-sessions-sqlx-store = { version = "0.15", features = [
  "postgres",
], optional = true }
axum-login = { version = "0.17.0", optional = true }
axum-helmet = { version = "0.1.0", optional = true }
axum-server = { version = "0.7.1", optional = true }

# Dioxus
dioxus = { version = "0.6.1", features = ["fullstack", "router", "web"] }
dioxus-logger = { version = "0.6.0" }
dioxus-cli-config = { version = "0.6.0" }

# Web

getrandom = { version = "0.3.1" }
serde_yaml = { version = "0.9" }
async-std = { version = "1.13.0" }
instant = { version = "0.1.13", features = ["inaccurate", "wasm-bindgen"] }
rand = { version = "0.9.0" }
markdown = { version = "1.0.0-alpha.23" }
web-sys = { version = "0.3.56", features = [
  "HtmlCanvasElement",
  "HtmlImageElement",
  "CanvasRenderingContext2d",
  "ImageData",
  "ImageBitmap",
  "Path2d",
  "Element",
  "DomRectReadOnly",
] }

futures = { version = "0.3.31" }

sentry = { version = "0.36.0", default-features = false, features = [
  "backtrace",
  "contexts",
  "panic",
  "transport",
  "debug-images",
  "reqwest",
  "rustls",
], optional = true }
wasm-bindgen-futures = "0.4.49"
wasm-bindgen = "0.2.100"

[features]

server = [
  "dep:axum",
  "dep:governor",
  "dep:tokio",
  "dep:axum-server",
  "dep:axum-extra",
  "dep:sqlx",
  "dep:reqwest",
  "dep:tower",
  "dep:tower-http",
  "dep:oauth2",
  "dep:rustrict",
  "dep:validator",
  "dep:tower_governor",
  "dep:forwarded-header-value",
  "dep:tower-sessions",
  "dep:tower-sessions-sqlx-store",
  "dep:axum-login",
  "dep:axum-helmet",
  "dep:serde_json",
  "dep:config",
  "dep:thiserror",
  "dep:sentry",
  "dioxus/server",
]
web = ["time/wasm-bindgen", "getrandom/wasm_js"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.build-override]
codegen-units = 1
debug = false
opt-level = 3
strip = "symbols"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
