[package]
name = "gabioinf"
version = "0.1.0"
edition = "2024"
authors = ["LilDojd <yawner@protonmail.com>"]
publish = false

[dependencies]
anyhow = { version = "1.0.100" }

reqwest = { version = "0.12", default-features = false, features = [
  "http2",
  "json",
], optional = true }
tracing = { version = "0.1.44" }
time = { version = "0.3", features = [
  "macros",
  "formatting",
  "serde",
  "local-offset",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", optional = true }
config = { version = "0.15.19", features = ["convert-case"], optional = true }
derive_more = { version = "2.1.1", features = ["from", "into"] }
thiserror = { version = "2.0.17", optional = true }


axum = { version = "0.8", features = ["multipart", "macros"], optional = true }
validator = { version = "0.20.0", features = ["derive"], optional = true }
tokio = { version = "1.49.0", features = ["full"], optional = true }
axum-extra = { version = "0.12", features = [
  "cookie-private",
  "typed-header",
], optional = true }
sqlx = { version = "0.8", features = [
  "time",
  "postgres",
  "macros",
  "tls-rustls",
], optional = true }
tower = { version = "0.5", optional = true, features = ["timeout", "util"] }
tower-http = { version = "0.6.8", features = ["cors", "fs"], optional = true }
oauth2 = { version = "5.0.0", optional = true }
rustrict = { version = "0.7.38", optional = true }
governor = { version = "0.10", optional = true }
tower_governor = { version = "0.8", features = [
  "tracing",
  "axum",
], optional = true }
forwarded-header-value = { version = "0.1.1", optional = true }
tower-sessions = { version = "0.14.0", features = ["signed"], optional = true }
tower-sessions-sqlx-store = { version = "0.15", features = [
  "postgres",
], optional = true }
axum-login = { version = "0.18.0", optional = true }
axum-helmet = { version = "0.2.0", optional = true }
axum-server = { version = "0.8.0", optional = true }

# Dioxus
dioxus = { version = "0.7.2", features = ["fullstack", "router", "web"] }
dioxus-logger = { version = "0.7.2" }
dioxus-cli-config = { version = "0.7.2" }

# Web

getrandom = { version = "0.3.4" }
serde_yaml = { version = "0.9" }
async-std = { version = "1.13.2" }
instant = { version = "0.1.13", features = ["inaccurate", "wasm-bindgen"] }
rand = { version = "0.9.2" }
markdown = { version = "1.0.0" }
web-sys = { version = "0.3.83", features = [
  "HtmlCanvasElement",
  "HtmlImageElement",
  "CanvasRenderingContext2d",
  "ImageData",
  "ImageBitmap",
  "Path2d",
  "Element",
  "DomRectReadOnly",
] }

futures = { version = "0.3.31" }

sentry = { version = "0.46.1", default-features = false, features = [
  "backtrace",
  "contexts",
  "panic",
  "transport",
  "debug-images",
  "reqwest",
  "rustls",
], optional = true }
wasm-bindgen-futures = "0.4.56"
wasm-bindgen = "0.2.106"

[features]

server = [
  "dep:axum",
  "dep:governor",
  "dep:tokio",
  "dep:axum-server",
  "dep:axum-extra",
  "dep:sqlx",
  "dep:reqwest",
  "dep:tower",
  "dep:tower-http",
  "dep:oauth2",
  "dep:rustrict",
  "dep:validator",
  "dep:tower_governor",
  "dep:forwarded-header-value",
  "dep:tower-sessions",
  "dep:tower-sessions-sqlx-store",
  "dep:axum-login",
  "dep:axum-helmet",
  "dep:serde_json",
  "dep:config",
  "dep:thiserror",
  "dep:sentry",
  "dioxus/server",
]
web = ["time/wasm-bindgen", "getrandom/wasm_js"]
