[package]
name = "backend"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "backend"
path = "src/bin/server.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart", "macros"] }
axum-extra = { version = "0.9.3", features = ["cookie-private"] }
axum-macros = "0.4.1"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shuttle-runtime = "0.47.0"
shuttle-axum = "0.47.0"
shuttle-shared-db = { version = "0.47.0", features = ["postgres", "sqlx"] }
tower-livereload = "0.9.3"
sqlx = { version = "0.7", features = [
  "chrono",
  "macros",
  "runtime-tokio-rustls",
  "uuid",
] }
uuid = { version = "1.10.0", features = ["fast-rng", "v4"] }
time = { version = "0.3.36", features = ["serde"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
chrono = { version = "0.4.38", features = ["clock", "serde"] }
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
oauth2 = "4.4.2"
reqwest = { version = "0.12.5", features = ["json"] }
shuttle-secrets = "0.42.0"
tracing-subscriber = "0.3.18"

[dev-dependencies]
axum-test = "15.3.0"
once_cell = "1.19.0"
testcontainers = { version = "0.20.1" }
testcontainers-modules = { version = "0.8.0", features = ["postgres"] }
