[package]
name = "frontend"
edition.workspace = true
version.workspace = true

[dependencies]
dioxus = { version = "0.5", features = ["web", "router"] }
dioxus-web = { version = "0.5" }
tracing = { workspace = true }
reqwest = { workspace = true }
web-sys = { version = "0.3.69", features = ["Window"] }
tracing-wasm = "0.2.1"
serde_json.workspace = true
manganis = "0.2.2"
chrono = { version = "0.4.38" }
