[package]
name = "frontend"
edition.workspace = true
version.workspace = true

[dependencies]
dioxus = { version = "0.6.0-alpha.1", features = [
  "static-generation",
  "router",
] }
tracing = { workspace = true }
reqwest = { workspace = true }
web-sys = { version = "0.3.69", features = ["Window"] }
tracing-wasm = "0.2.1"
serde_json.workspace = true
chrono = { version = "0.4.38" }

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
